--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -291,3 +291,34 @@
       production: false
       debug: false
       priority: 10
+
+- name: openqa
+  repositories:
+    - name: remi
+      arch: x86_64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-openqa-almalinux-9-x86_64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: remi
+      arch: aarch64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-openqa-almalinux-9-aarch64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: remi
+      arch: s390x
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-openqa-almalinux-9-s390x-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: remi
+      arch: ppc64le
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-openqa-almalinux-9-ppc64le-dr/
+      production: false
+      debug: false
+      priority: 10
