--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,5 @@ pgpy==0.5.4
 markdown==3.4.1
 fastapi-users-db-sqlalchemy==4.0.3
 httpx-oauth==0.7.0
-sentry-sdk[fastapi]==1.12.1
+sentry-sdk[fastapi]==1.7.2  # requires FastAPI>=0.79.0
 git+https://git.almalinux.org/almalinux/cas_wrapper.git@0.0.3#egg=cas_wrapper
