ALBS-297: Added header to nginx conf for decompressing logs, fixed some bugs

--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -58,6 +58,10 @@ server {
     }
 
     location /pulp/ {
+        # header for decompressing build/test logs
+        if ($request_uri ~* (\.log$)) {
+            add_header Content-Encoding gzip;
+        }
         proxy_pass http://pulp;
     }
 }
