--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,6 +161,24 @@ services:
       - pulp
       - rabbitmq
 
+  task_queue_tests:
+    image: albs-task-queue:latest
+    env_file:
+      - vars.env
+    build:
+      dockerfile: Dockerfile.task-queue
+      context: .
+    volumes:
+      - "./alws:/code/alws"
+    command: bash -c 'source env/bin/activate &&
+                      /wait_for_it.sh rabbitmq:5672 &&
+                      dramatiq alws.dramatiq --processes 1 --threads 1 -Q tests'
+    restart: on-failure
+    depends_on:
+      - db
+      - pulp
+      - rabbitmq
+
   frontend:
     image: albs-frontend:latest
     env_file:
