--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,6 +26,7 @@ jobs:
           echo POSTGRES_PASSWORD="password" >> ./vars.env
           echo JWT_SECRET="secret" >> ./vars.env
           echo POSTGRES_DB="test-almalinux-bs" >> ./vars.env
+          echo PACKAGE_BEHOLDER_ENABLED="False" >> ./vars.env
           echo DATABASE_URL="postgresql+asyncpg://postgres:password@db/test-almalinux-bs" >> ./vars.env
           echo SYNC_DATABASE_URL="postgresql+psycopg2://postgres:password@db/test-almalinux-bs" >> ./vars.env
           echo PULP_DATABASE_URL="postgresql+psycopg2://postgres:password@db/test-almalinux-bs" >> ./vars.env
