--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi[all]==0.92.0
-fastapi-users[all]==10.3.0
+fastapi-sqla==2.8.1
+fastapi-users[all]==10.4.0
 uvicorn==0.20.0
 asyncpg==0.27.0
 psycopg2-binary==2.9.5
@@ -14,7 +15,7 @@ jmespath==1.0.1
 PyYAML==6.0
 lxml==4.9.2
 syncer==1.3.0
-dramatiq[rabbitmq, watch]
+dramatiq[rabbitmq, watch]==1.14.1
 python-multipart==0.0.5
 plumbum==1.8.1
 tap.py==3.1
