--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -61,6 +61,8 @@
       environment:
         DFLTCC: '0'
       use_bootstrap_container: false
+      nspawn_args:
+        - '--rlimit=RLIMIT_NOFILE=10240'
       secure_boot_macros:
         "%__pesign_cert": "%pe_signing_cert"
         "%__pesign_client_cert": "%pe_signing_cert"
@@ -1453,6 +1455,8 @@
       package_manager: dnf
       releasever: '9'
       use_bootstrap_container: false
+      nspawn_args:
+        - '--rlimit=RLIMIT_NOFILE=10240'
       secure_boot_macros:
         "%pe_signing_cert": "Cloud Linux Software, Inc"
         "%pe_signing_token": "profil standardowy"
