--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
+      - "./tests:/code/tests"
       - "./almalinux:/code/almalinux"
       - "./scripts:/code/scripts"
       - "../volumes/pulp/exports:/srv/exports"
