--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,7 +2,7 @@ name: pytest
 on:
   pull_request_target:
     branches:
-      - [ main ]
+      - [ master ]
 jobs:
   build:
     runs-on: ubuntu-latest
