--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,7 +1,8 @@
 name: pytest
 on:
   pull_request_target:
-    branches: [ master ]
+    branches:
+      - "**"
 jobs:
   build:
     runs-on: ubuntu-latest
