--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,6 @@
 name: pytest
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - "**"
 jobs:
@@ -48,6 +48,7 @@ jobs:
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
+          token: {{ secrets.GITHUB_TOKEN }}
           pytest-coverage-path: /tmp/pytest-coverage.txt
           pytest-xml-coverage-path: /tmp/coverage.xml
           title: Coverage report
