--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -278,6 +278,23 @@ services:
       - 6379:6379
     restart: on-failure
 
+  sign_file:
+    image: sign-file:latest
+    env_file:
+      - vars.env
+    build:
+      dockerfile: Dockerfile
+      context: ../albs-sign-file
+    command: >
+      bash -c "/app/env/bin/python /app/db_manage.py dev_init
+      && /app/env/bin/python /app/start.py"
+    restart: on-failure
+    volumes:
+      - "~/.gnupg:/home/alt/.gnupg"
+      - "../albs-sign-file/sign:/app/sign"
+    ports:
+      - "8083:8000"
+
   nginx:
     image: nginx
     ports:
@@ -287,3 +304,4 @@ services:
     depends_on:
       - web_server
       - frontend
+      - sign_file
