--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -1,8 +1,8 @@
 - name: AlmaLinux-8-beta
   modularity:
     git_tag_prefix:
-      modified: a8
-      non_modified: c8
+      modified: a8-beta
+      non_modified: c8-beta
     versions:
       - name: '8.8'
         version_prefix: '80800'
@@ -94,8 +94,8 @@
 - name: AlmaLinux-9-beta
   modularity:
     git_tag_prefix:
-      modified: a9
-      non_modified: c9
+      modified: a9-beta
+      non_modified: c9-beta
     versions:
       - name: '9.2'
         version_prefix: '90200'
