--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -61,7 +61,8 @@
         DFLTCC: '0'
       use_bootstrap_container: false
       nspawn_args:
-        - '--capability=cap_ipc_lock --rlimit=RLIMIT_NOFILE=20480'
+        - '--rlimit=RLIMIT_NOFILE=20480'
+        - '--capability=cap_ipc_lock'
       secure_boot_macros:
         "%__pesign_cert": "%pe_signing_cert"
         "%__pesign_client_cert": "%pe_signing_cert"
@@ -1454,7 +1455,8 @@
       releasever: '9'
       use_bootstrap_container: false
       nspawn_args:
-        - '--capability=cap_ipc_lock --rlimit=RLIMIT_NOFILE=20480'
+        - '--rlimit=RLIMIT_NOFILE=20480'
+        - '--capability=cap_ipc_lock'
       secure_boot_macros:
         "%pe_signing_cert": "Cloud Linux Software, Inc"
         "%pe_signing_token": "profil standardowy"
