--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -1445,7 +1445,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
       dnf_common_opts:
         - --setopt=deltarpm=False
         - --allowerasing
